--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,37 @@
-<!DOCTYPE html>
+# <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Myapp" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Consulting Scheduler</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= yield :head %>
-
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'trix' %>
+    <%= javascript_include_tag 'trix' %>
   </head>
-
-  <body>
-    <%= yield %>
+  <body class="bg-gray-100">
+    <nav class="bg-blue-600 p-4">
+      <div class="container mx-auto flex justify-between">
+        <%= link_to 'Consulting Scheduler', root_path, class: 'text-white font-bold' %>
+        <div>
+          <% if user_signed_in? %>
+            <%= link_to 'Profile', user_meetings_path(current_user), class: 'text-white mr-4' %>
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'text-white' %>
+            <% if current_user.role == 'admin' %>
+              <%= link_to 'Admin Dashboard', admin_dashboard_path, class: 'text-white mr-4' %>
+            <% end %>
+          <% else %>
+            <%= link_to 'Login', new_user_session_path, class: 'text-white mr-4' %>
+            <%= link_to 'Sign Up', new_user_registration_path, class: 'text-white' %>
+          <% end %>
+        </div>
+      </div>
+    </nav>
+    <div class="container mx-auto p-4">
+      <%= yield %>
+    </div>
   </body>
 </html>
