--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,25 @@
-<div class="border p-2 mb-2">
-  <p><%= comment.content.html_safe %></p>
-  <p class="text-sm text-gray-500">By <%= comment.user.email %> at <%= comment.created_at %></p>
+<div id="<%= dom_id(comment) %>" class="bg-gray-50 rounded-lg p-4">
+  <div class="flex justify-between items-start">
+    <div class="flex items-center space-x-3">
+      <div class="flex-shrink-0">
+        <div class="h-10 w-10 rounded-full bg-gray-300 flex items-center justify-center">
+          <span class="text-gray-600 font-medium"><%= comment.user.name[0].upcase %></span>
+        </div>
+      </div>
+      <div>
+        <div class="text-sm font-medium text-gray-900"><%= comment.user.name %></div>
+        <div class="text-sm text-gray-500"><%= time_ago_in_words(comment.created_at) %> ago</div>
+      </div>
+    </div>
+    <% if comment.user == current_user || current_user.admin? %>
+      <%= button_to session_comment_path(comment.session, comment), method: :delete, class: "text-gray-400 hover:text-gray-500", data: { turbo_confirm: "Are you sure?" } do %>
+        <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+        </svg>
+      <% end %>
+    <% end %>
+  </div>
+  <div class="mt-2 prose prose-sm max-w-none">
+    <%= comment.content %>
+  </div>
 </div>
