--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
         Effortlessly book, manage, and pay for consulting sessions in one intuitive platform.
       </p>
       <div class="flex justify-center space-x-4">
-        <a href="<%= new_user_registration_path %>" class="inline-block bg-black text-white px-6 md:px-8 py-3 md:py-4 rounded-full text-sm md:text-base font-semibold hover:bg-gray-800 transition-colors shadow-md">
+        <a href="/auth/auth0" class="inline-block bg-black text-white px-6 md:px-8 py-3 md:py-4 rounded-full text-sm md:text-base font-semibold hover:bg-gray-800 transition-colors shadow-md">
           Get Started
         </a>
         <a href="#features" class="inline-block text-black px-6 md:px-8 py-3 md:py-4 rounded-full text-sm md:text-base font-semibold hover:text-gray-700 transition-colors border border-black">
