--- a/app/views/admin/meetings/index.html.erb
+++ b/app/views/admin/meetings/index.html.erb
@@ -1,26 +1,36 @@
-<h1 class="text-2xl font-bold mb-4">All Meetings</h1>
+<h1 class="text-2xl font-bold mb-6">All Meetings</h1>
+
 <%= render 'admin/dashboard/filter_form' %>
-<table class="w-full border">
-  <thead>
-    <tr class="bg-gray-200">
-      <th class="p-2">User</th>
-      <th class="p-2">Start Time</th>
-      <th class="p-2">Duration</th>
-      <th class="p-2">Status</th>
-      <th class="p-2">Actions</th>
+
+<table class="w-full border rounded shadow-sm mb-6">
+  <thead class="bg-gray-100">
+    <tr>
+      <th class="text-left p-3">Title</th>
+      <th class="text-left p-3">Client</th>
+      <th class="text-left p-3">Consultant</th>
+      <th class="text-left p-3">Start Time</th>
+      <th class="text-left p-3">Duration</th>
+      <th class="text-left p-3">Status</th>
+      <th class="text-left p-3">Actions</th>
     </tr>
   </thead>
   <tbody>
     <% @meetings.each do |meeting| %>
-      <tr class="border-t">
-        <td class="p-2"><%= meeting.user.email %></td>
-        <td class="p-2"><%= meeting.start_time.strftime('%Y-%m-%d %H:%M') %></td>
-        <td class="p-2"><%= meeting.duration %> min</td>
-        <td class="p-2"><%= meeting.status %></td>
-        <td class="p-2">
-          <%= link_to 'Cancel', admin_meeting_path(meeting), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500' %>
+      <tr class="border-t hover:bg-gray-50">
+        <td class="p-3">
+          <%= link_to meeting.title, admin_meeting_path(meeting), class: 'text-blue-600 hover:underline' %>
+        </td>
+        <td class="p-3"><%= meeting.client.email %></td>
+        <td class="p-3"><%= meeting.consultant.email %></td>
+        <td class="p-3"><%= meeting.start_time.strftime('%B %d, %Y at %I:%M %p') %></td>
+        <td class="p-3"><%= meeting.duration %> min</td>
+        <td class="p-3 capitalize"><%= meeting.status %></td>
+        <td class="p-3">
+          <%= link_to 'Cancel', admin_meeting_path(meeting), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500 hover:underline' %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= link_to 'Back to Dashboard', admin_dashboard_path, class: 'inline-block bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded' %>
