--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,22 +1,27 @@
-<h1 class="text-2xl font-bold mb-4">User Management</h1>
-<table class="w-full border">
-  <thead>
-    <tr class="bg-gray-200">
-      <th class="p-2">Email</th>
-      <th class="p-2">Role</th>
-      <th class="p-2">Actions</th>
+<h1 class="text-2xl font-bold mb-6">User Management</h1>
+
+<table class="w-full border rounded shadow-sm mb-6">
+  <thead class="bg-gray-100">
+    <tr>
+      <th class="text-left p-3">Email</th>
+      <th class="text-left p-3">Role</th>
+      <th class="text-left p-3">Actions</th>
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
-      <tr class="border-t">
-        <td class="p-2"><%= user.email %></td>
-        <td class="p-2"><%= user.role %></td>
-        <td class="p-2">
-          <%= link_to 'Edit', edit_admin_user_path(user), class: 'text-blue-500 mr-2' %>
-          <%= link_to 'Delete', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500' %>
+      <tr class="border-t hover:bg-gray-50">
+        <td class="p-3">
+          <%= link_to user.email, admin_user_path(user), class: 'text-blue-600 hover:underline' %>
+        </td>
+        <td class="p-3 capitalize"><%= user.role %></td>
+        <td class="p-3">
+          <%= link_to 'Edit', edit_admin_user_path(user), class: 'text-blue-500 hover:underline mr-4' %>
+          <%= link_to 'Delete', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-red-500 hover:underline' %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= link_to 'Back to Dashboard', admin_dashboard_path, class: 'inline-block bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded' %>
